--- a/demo-project/groovy/build.gradle
+++ b/demo-project/groovy/build.gradle
@@ -26,7 +26,7 @@ buildConfig {
     buildConfigField(boolean, 'FEATURE_ENABLED', true)
     buildConfigField('List<Int>', 'MAGIC_NUMBERS', [1, 2, 3])
 
-    // all possible kind for String
+    // all possible kinds for String
     buildConfigField(String, "STRING", "aString")
     buildConfigField(String, "STRING_NULL", null)
     buildConfigField(String, "STRING_PROVIDER", provider { "aString" })
@@ -39,7 +39,7 @@ buildConfig {
     buildConfigField('Set<String>', "STRING_SET", ["a", null, "c"])
     buildConfigField('Set<String>', "STRING_SET_PROVIDER", provider { ["a", null, "c"] })
 
-    // all possible kind for Byte
+    // all possible kinds for Byte
     buildConfigField(byte, "BYTE", 64 as byte)
     buildConfigField(Byte, "BYTE_NULL", null)
     buildConfigField(byte, "BYTE_PROVIDER", provider { 64 as byte })
@@ -54,7 +54,7 @@ buildConfig {
     buildConfigField('Set<Byte>', "BYTE_SET", [1, null, 3])
     buildConfigField('Set<Byte>', "BYTE_SET_PROVIDER", provider { [1, null, 3] })
 
-    // all possible kind for Short
+    // all possible kinds for Short
     buildConfigField(short, "SHORT", 64)
     buildConfigField(short, "SHORT_NULL", null)
     buildConfigField(short, "SHORT_PROVIDER", provider { 64 })
@@ -69,7 +69,7 @@ buildConfig {
     buildConfigField('Set<Short>', "SHORT_SET", [1, null, 3])
     buildConfigField('Set<Short>', "SHORT_SET_PROVIDER", provider { [1, null, 3] })
 
-    // all possible kind for Char
+    // all possible kinds for Char
     buildConfigField(char, "CHAR", 'a' as char)
     buildConfigField(Character, "CHAR_NULL", null)
     buildConfigField(char, "CHAR_PROVIDER", provider { 'a' as char })
@@ -84,7 +84,7 @@ buildConfig {
     buildConfigField('Set<Character>', "CHAR_SET", ['a' as char, null, 'c' as char])
     buildConfigField('Set<Character>', "CHAR_SET_PROVIDER", provider { ['a' as char, null, 'c' as char] })
 
-    // all possible kind for Int
+    // all possible kinds for Int
     buildConfigField(int, "INT", 1)
     buildConfigField(Integer, "INT_NULL", null)
     buildConfigField(int, "INT_PROVIDER", provider { 1 })
@@ -99,7 +99,7 @@ buildConfig {
     buildConfigField('Set<Integer>', "INT_SET", [1, null, 3])
     buildConfigField('Set<Integer>', "INT_SET_PROVIDER", provider { [1, null, 3] })
 
-    // all possible kind for Long
+    // all possible kinds for Long
     buildConfigField(long, "LONG", 1L)
     buildConfigField(Long, "LONG_NULL", null)
     buildConfigField(long, "LONG_PROVIDER", provider { 1L })
@@ -114,7 +114,7 @@ buildConfig {
     buildConfigField('Set<Long>', "LONG_SET", [1L, null, 3L])
     buildConfigField('Set<Long>', "LONG_SET_PROVIDER", provider { [1L, null, 3L] })
 
-    // all possible kind for Float
+    // all possible kinds for Float
     buildConfigField(float, "FLOAT", 1f)
     buildConfigField(Float, "FLOAT_NULL", null)
     buildConfigField(float, "FLOAT_PROVIDER", provider { 1f })
@@ -129,7 +129,7 @@ buildConfig {
     buildConfigField('Set<Float>', "FLOAT_SET", [1f, null, 3f])
     buildConfigField('Set<Float>', "FLOAT_SET_PROVIDER", provider { [1f, null, 3f] })
 
-    // all possible kind for Double
+    // all possible kinds for Double
     buildConfigField(double, "DOUBLE", 1.0)
     buildConfigField(Double, "DOUBLE_NULL", null)
     buildConfigField(double, "DOUBLE_PROVIDER", provider { 1.0 })
@@ -144,7 +144,7 @@ buildConfig {
     buildConfigField('Set<Double>', "DOUBLE_SET", [1.0, null, 3.0])
     buildConfigField('Set<Double>', "DOUBLE_SET_PROVIDER", provider { [1.0, null, 3.0] })
 
-    // all possible kind for Boolean
+    // all possible kinds for Boolean
     buildConfigField(boolean, "BOOLEAN", true)
     buildConfigField(Boolean, "BOOLEAN_NULL", null)
     buildConfigField(boolean, "BOOLEAN_PROVIDER", provider { true })
