--- a/demo-project/groovy-gen-kotlin/build.gradle
+++ b/demo-project/groovy-gen-kotlin/build.gradle
@@ -33,6 +33,7 @@ buildConfig {
     buildConfigField(String[], "STRING_ARRAY_PROVIDER", provider { ["a", "b", "c"] })
     buildConfigField(String[], "STRING_ARRAY_NULLABLE", ["a", null, "c"])
     buildConfigField(String[], "STRING_ARRAY_NULLABLE_PROVIDER", provider { ["a", null, "c"] })
+    buildConfigField('String[]?', "STRING_ARRAY_NULL", provider { null as String[] })
     buildConfigField('List<String>', "STRING_LIST", ["a", null, "c"])
     buildConfigField('List<String>', "STRING_LIST_PROVIDER", provider { ["a", null, "c"] })
     buildConfigField('Set<String>', "STRING_SET", ["a", null, "c"])
@@ -48,6 +49,7 @@ buildConfig {
     buildConfigField(Byte[], "BYTE_ARRAY_PROVIDER", provider { [1, 2, 3] })
     buildConfigField('Byte?[]', "BYTE_ARRAY_NULLABLE", [1, null, 3])
     buildConfigField('Byte?[]', "BYTE_ARRAY_NULLABLE_PROVIDER", provider { [1, null, 3] })
+    buildConfigField('Byte[]?', "BYTE_ARRAY_NULL", provider { null as Byte[] })
     buildConfigField('List<Byte>', "BYTE_LIST", [1, null, 3])
     buildConfigField('List<Byte>', "BYTE_LIST_PROVIDER", provider { [1, null, 3] })
     buildConfigField('Set<Byte>', "BYTE_SET", [1, null, 3])
@@ -63,6 +65,7 @@ buildConfig {
     buildConfigField(Short[], "SHORT_ARRAY_PROVIDER", provider { [1, 2, 3] })
     buildConfigField('Short?[]', "SHORT_ARRAY_NULLABLE", [1, null, 3])
     buildConfigField('Short?[]', "SHORT_ARRAY_NULLABLE_PROVIDER", provider { [1, null, 3] })
+    buildConfigField('Short[]?', "SHORT_ARRAY_NULL", provider { null as Short[] })
     buildConfigField('List<Short>', "SHORT_LIST", [1, null, 3])
     buildConfigField('List<Short>', "SHORT_LIST_PROVIDER", provider { [1, null, 3] })
     buildConfigField('Set<Short>', "SHORT_SET", [1, null, 3])
@@ -78,6 +81,7 @@ buildConfig {
     buildConfigField(Character[], "CHAR_ARRAY_PROVIDER", provider { ['a' as char, 'b' as char, 'c' as char] })
     buildConfigField('Character?[]', "CHAR_ARRAY_NULLABLE", ['a' as char, null, 'c' as char])
     buildConfigField('Character?[]', "CHAR_ARRAY_NULLABLE_PROVIDER", provider { ['a' as char, null, 'c' as char] })
+    buildConfigField('Character[]?', "CHAR_ARRAY_NULL", provider { null as Character[] })
     buildConfigField('List<Character>', "CHAR_LIST", ['a' as char, null, 'c' as char])
     buildConfigField('List<Character>', "CHAR_LIST_PROVIDER", provider { ['a' as char, null, 'c' as char] })
     buildConfigField('Set<Character>', "CHAR_SET", ['a' as char, null, 'c' as char])
@@ -93,6 +97,7 @@ buildConfig {
     buildConfigField(Integer[], "INT_ARRAY_PROVIDER", provider { [1, 2, 3] })
     buildConfigField('Integer?[]', "INT_ARRAY_NULLABLE", [1, null, 3])
     buildConfigField('Integer?[]', "INT_ARRAY_NULLABLE_PROVIDER", provider { [1, null, 3] })
+    buildConfigField('Integer[]?', "INT_ARRAY_NULL", provider { null as Integer[] })
     buildConfigField('List<Integer>', "INT_LIST", [1, null, 3])
     buildConfigField('List<Integer>', "INT_LIST_PROVIDER", provider { [1, null, 3] })
     buildConfigField('Set<Integer>', "INT_SET", [1, null, 3])
@@ -108,6 +113,7 @@ buildConfig {
     buildConfigField(Long[], "LONG_ARRAY_PROVIDER", provider { [1L, 2L, 3L] })
     buildConfigField('Long?[]', "LONG_ARRAY_NULLABLE", [1L, null, 3L])
     buildConfigField('Long?[]', "LONG_ARRAY_NULLABLE_PROVIDER", provider { [1L, null, 3L] })
+    buildConfigField('Long[]?', "LONG_ARRAY_NULL", provider { null as Long[] })
     buildConfigField('List<Long>', "LONG_LIST", [1L, null, 3L])
     buildConfigField('List<Long>', "LONG_LIST_PROVIDER", provider { [1L, null, 3L] })
     buildConfigField('Set<Long>', "LONG_SET", [1L, null, 3L])
@@ -123,6 +129,7 @@ buildConfig {
     buildConfigField(Float[], "FLOAT_ARRAY_PROVIDER", provider { [1f, 2f, 3f] })
     buildConfigField('Float?[]', "FLOAT_ARRAY_NULLABLE", [1f, null, 3f])
     buildConfigField('Float?[]', "FLOAT_ARRAY_NULLABLE_PROVIDER", provider { [1f, null, 3f] })
+    buildConfigField('Float[]?', "FLOAT_ARRAY_NULL", provider { null as Float[] })
     buildConfigField('List<Float>', "FLOAT_LIST", [1f, null, 3f])
     buildConfigField('List<Float>', "FLOAT_LIST_PROVIDER", provider { [1f, null, 3f] })
     buildConfigField('Set<Float>', "FLOAT_SET", [1f, null, 3f])
@@ -138,6 +145,7 @@ buildConfig {
     buildConfigField(Double[], "DOUBLE_ARRAY_PROVIDER", provider { [1.0, 2.0, 3.0] })
     buildConfigField('Double?[]', "DOUBLE_ARRAY_NULLABLE", [1.0, null, 3.0])
     buildConfigField('Double?[]', "DOUBLE_ARRAY_NULLABLE_PROVIDER", provider { [1.0, null, 3.0] })
+    buildConfigField('Double[]?', "DOUBLE_ARRAY_NULL", provider { null as Double[] })
     buildConfigField('List<Double>', "DOUBLE_LIST", [1.0, null, 3.0])
     buildConfigField('List<Double>', "DOUBLE_LIST_PROVIDER", provider { [1.0, null, 3.0] })
     buildConfigField('Set<Double>', "DOUBLE_SET", [1.0, null, 3.0])
@@ -153,6 +161,7 @@ buildConfig {
     buildConfigField(Boolean[], "BOOLEAN_ARRAY_PROVIDER", provider { [true, false, false] })
     buildConfigField('Boolean?[]', "BOOLEAN_ARRAY_NULLABLE", [true, null, false])
     buildConfigField('Boolean?[]', "BOOLEAN_ARRAY_NULLABLE_PROVIDER", provider { [true, null, false] })
+    buildConfigField('Boolean[]?', "BOOLEAN_ARRAY_NULL", provider { null as Boolean[] })
     buildConfigField('List<Boolean>', "BOOLEAN_LIST", [true, null, false])
     buildConfigField('List<Boolean>', "BOOLEAN_LIST_PROVIDER", provider { [true, null, false] })
     buildConfigField('Set<Boolean>', "BOOLEAN_SET", [true, null, false])
