--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,8 @@ javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 junit = { module = "junit:junit", version = "4.13.2" }
 junit5-bom = { module = "org.junit:junit-bom", version = "5.13.0" }
 junit5-params = { module = "org.junit.jupiter:junit-jupiter-params" }
+junit5-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
+junit5-platformLauncher = { module = "org.junit.platform:junit-platform-launcher" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinpoet = { module = "com.squareup:kotlinpoet", version = "2.2.0" }
 mockk = { module = "io.mockk:mockk", version = "1.14.2" }
