--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -54,7 +54,7 @@ jobs:
         if: ${{ !cancelled() }}
         uses: gmazzo/publish-report-annotations@v1
         with:
-          checkName: Test Results
+          checkName: Test Results - `${{ matrix.project }}`
 
   ci-cd-passed:
     name: CI/CD passed
