--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -60,7 +60,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ !cancelled() }}
+    if: ${{ !cancelled() && github.event.repository.fork == false }}
     steps:
       - name: Build has passed
         if: ${{ needs.build.result != 'success' }}
