--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   update-gradle-wrapper:
     runs-on: ubuntu-latest
-
+    if: github.event.repository.fork == false
     steps:
       - name: Checkout
         uses: actions/checkout@v5
