Tweak Gradle flags

--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -4,3 +4,5 @@ org.gradle.configuration-cache.parallel=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx4g
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
 org.gradle.parallel=true
+
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
