Update permissions in CI/CD workflow configuration

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -10,7 +10,9 @@ on:
   release:
     types: [ published ]
 
-permissions: write-all
+permissions: 
+  checks: write
+  pull-requests: write
 
 jobs:
   compute-projects:
