--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -56,17 +56,24 @@ jobs:
         with:
           checkName: Test Results (${{ matrix.project }})
 
-  publish:
-    name: Publish
+  build-passed:
+    name: Build passed
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ !cancelled() && !github.event.repository.fork && github.ref == 'refs/heads/main' }}
+    if: ${{ !cancelled() }}
     steps:
       - name: Build has passed
         if: ${{ needs.build.result != 'success' }}
         run: |
           echo "Build was not successful!"
           exit 1
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ !cancelled() && !github.event.repository.fork && !github.event.pull_request.head.repo.fork }}
+    steps:
       - name: Checkout
         uses: actions/checkout@v5
         with:
