Publishing plugins are CC compatible
```diff
diff --color=auto -rf buildconfig-old/com.github.gmazzo.buildconfig.gradle.plugin/0.1.0-SNAPSHOT/maven-metadata-local.xml buildconfig-new/com.github.gmazzo.buildconfig.gradle.plugin/0.1.0-SNAPSHOT/maven-metadata-local.xml
c6
    <lastUpdated>20251109203111</lastUpdated>
.
c14
        <updated>20251109203111</updated>
.
diff --color=auto -rf buildconfig-old/com.github.gmazzo.buildconfig.gradle.plugin/maven-metadata-local.xml buildconfig-new/com.github.gmazzo.buildconfig.gradle.plugin/maven-metadata-local.xml
c10
    <lastUpdated>20251109203111</lastUpdated>
.
diff --color=auto -rf buildconfig-old/plugin/0.1.0-SNAPSHOT/maven-metadata-local.xml buildconfig-new/plugin/0.1.0-SNAPSHOT/maven-metadata-local.xml
c6
    <lastUpdated>20251109203111</lastUpdated>
.
c12 13
        <extension>pom</extension>
.
c15
        <updated>20251109203111</updated>
.
c18 19
        <extension>module</extension>
.
c21
        <updated>20251109203111</updated>
.
a23
        <classifier>javadoc</classifier>
.
c26
        <updated>20251109203111</updated>
.
c29
        <classifier>sources</classifier>
        <extension>jar</extension>
.
c31
        <updated>20251109203111</updated>
.
c34
        <extension>jar</extension>
.
c36
        <updated>20251109203111</updated>
.
Binary files buildconfig-old/plugin/0.1.0-SNAPSHOT/plugin-0.1.0-SNAPSHOT-javadoc.jar and buildconfig-new/plugin/0.1.0-SNAPSHOT/plugin-0.1.0-SNAPSHOT-javadoc.jar differ
diff --color=auto -rf buildconfig-old/plugin/0.1.0-SNAPSHOT/plugin-0.1.0-SNAPSHOT.module buildconfig-new/plugin/0.1.0-SNAPSHOT/plugin-0.1.0-SNAPSHOT.module
c107 111
          "size": 500338,
          "sha512": "d2816986a267f638bdace745c40b99154aceeb0ef51685effe44d19b1025f1a92871866225d65a34ab19ec061011809e05094c21f7bdb95c97fa51abf53f7c6d",
          "sha256": "cc707da50c5ae8f3e4eff101c946023bff8467f34d14687956c54cc81bde4b3a",
          "sha1": "f10eb1bc539062821ec2edfe948bed3832ca77b4",
          "md5": "007b59bcf4a

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -99,7 +99,7 @@ jobs:
           ORG_GRADLE_PROJECT_gitVersionForceSnapshot: ${{ github.event_name != 'release' }}
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
-        run: ./gradlew --no-configuration-cache publish
+        run: ./gradlew publish
 
   actionlint:
     name: Validate Workflows
