--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,10 @@
 [versions]
+agp = "8.10.1"
 java = "17"
 kotlin = "2.2.21"
 
 [libraries]
+androidx-gradlePluginLints = "androidx.lint:lint-gradle:1.0.0-alpha05"
 javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 junit = { module = "junit:junit", version = "4.13.2" }
 junit5-bom = { module = "org.junit:junit-bom", version = "6.0.1" }
@@ -14,7 +16,8 @@ kotlinpoet = { module = "com.squareup:kotlinpoet", version = "2.2.0" }
 mockk = { module = "io.mockk:mockk", version = "1.14.2" }
 
 [plugins]
-android = { id = "com.android.application", version = "8.10.1" }
+android-application = { id = "com.android.application", version.ref = "agp" }
+android-lint = { id = "com.android.lint", version.ref = "agp" }
 dokka = { id = "org.jetbrains.dokka-javadoc", version = "2.0.0" }
 gitVersion = { id = "io.github.gmazzo.gitversion", version = "1.5.1" }
 gradle-pluginPublish = { id = "com.gradle.plugin-publish", version = "1.3.1" }
