--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,8 @@ kotlin = "2.2.21"
 android = "8.13.1"
 
 [libraries]
+autoservice = { module = "com.google.auto.service:auto-service", version = "1.1.1" }
+autoservice-ksp = { module = "dev.zacsweers.autoservice:auto-service-ksp", version = "1.2.0" }
 javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 junit = { module = "junit:junit", version = "4.13.2" }
 junit5-bom = { module = "org.junit:junit-bom", version = "6.0.1" }
@@ -24,6 +26,7 @@ gradle-pluginPublish = { id = "com.gradle.plugin-publish", version = "2.0.0" }
 jacoco-testkit = { id = "io.github.gmazzo.gradle.testkit.jacoco", version = "1.0.4" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version = "2.3.3" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 mavenPublish = { id = "com.vanniktech.maven.publish", version = "0.35.0" }
 publicationsReport = { id = "io.github.gmazzo.publications.report", version = "1.3.3" }
