--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,6 +14,10 @@ permissions:
   checks: write
   pull-requests: write
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
+
 jobs:
   compute-projects:
     name: Compute projects
@@ -67,7 +71,7 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-passed
     if: ${{ !cancelled() && !github.event.repository.fork && !github.event.pull_request.head.repo.fork }}
     steps:
       - name: Checkout
