--- a/demo-project/groovy-gen-kotlin/build.gradle
+++ b/demo-project/groovy-gen-kotlin/build.gradle
@@ -46,6 +46,8 @@ buildConfig {
     buildConfigField(byte[], "BYTE_NATIVE_ARRAY_PROVIDER", provider { [1, 2, 3] })
     buildConfigField(Byte[], "BYTE_ARRAY", [1, 2, 3])
     buildConfigField(Byte[], "BYTE_ARRAY_PROVIDER", provider { [1, 2, 3] })
+    buildConfigField('Byte[]?', "BYTE_NATIVE_ARRAY_NULLABLE", [1, 2, 3] as byte[])
+    buildConfigField('Byte[]?', "BYTE_NATIVE_ARRAY_NULL", provider { null as byte[] })
     buildConfigField('Byte?[]', "BYTE_ARRAY_NULLABLE", [1, null, 3])
     buildConfigField('Byte?[]', "BYTE_ARRAY_NULLABLE_PROVIDER", provider { [1, null, 3] })
     buildConfigField('Byte[]?', "BYTE_ARRAY_NULL", provider { null as Byte[] })
@@ -60,6 +62,8 @@ buildConfig {
     buildConfigField(short, "SHORT_PROVIDER", provider { 64 })
     buildConfigField(short[], "SHORT_NATIVE_ARRAY", [1, 2, 3])
     buildConfigField(short[], "SHORT_NATIVE_ARRAY_PROVIDER", provider { [1, 2, 3] })
+    buildConfigField('Short[]?', "SHORT_NATIVE_ARRAY_NULLABLE", [1, 2, 3] as short[])
+    buildConfigField('Short[]?', "SHORT_NATIVE_ARRAY_NULL", provider { null as short[] })
     buildConfigField(Short[], "SHORT_ARRAY", [1, 2, 3])
     buildConfigField(Short[], "SHORT_ARRAY_PROVIDER", provider { [1, 2, 3] })
     buildConfigField('Short?[]', "SHORT_ARRAY_NULLABLE", [1, null, 3])
@@ -76,6 +80,8 @@ buildConfig {
     buildConfigField(char, "CHAR_PROVIDER", provider { 'a' as char })
     buildConfigField(char[], "CHAR_NATIVE_ARRAY", ['a' as char, 'b' as char, 'c' as char])
     buildConfigField(char[], "CHAR_NATIVE_ARRAY_PROVIDER", provider { ['a' as char, 'b' as char, 'c' as char] })
+    buildConfigField('Character[]?', "CHAR_NATIVE_ARRAY_NULLABLE", ['a' as char, 'b' as char, 'c' as char])
+    buildConfigField('Character[]?', "CHAR_NATIVE_ARRAY_NULL", provider { null as char[] })
     buildConfigField(Character[], "CHAR_ARRAY", ['a' as char, 'b' as char, 'c' as char])
     buildConfigField(Character[], "CHAR_ARRAY_PROVIDER", provider { ['a' as char, 'b' as char, 'c' as char] })
     buildConfigField('Character?[]', "CHAR_ARRAY_NULLABLE", ['a' as char, null, 'c' as char])
@@ -92,6 +98,8 @@ buildConfig {
     buildConfigField(int, "INT_PROVIDER", provider { 1 })
     buildConfigField(int[], "INT_NATIVE_ARRAY", [1, 2, 3])
     buildConfigField(int[], "INT_NATIVE_ARRAY_PROVIDER", provider { [1, 2, 3] })
+    buildConfigField('Integer[]?', "INT_NATIVE_ARRAY_NULLABLE", [1, 2, 3])
+    buildConfigField('Integer[]?', "INT_NATIVE_ARRAY_NULL", provider { null as int[] })
     buildConfigField(Integer[], "INT_ARRAY", [1, 2, 3])
     buildConfigField(Integer[], "INT_ARRAY_PROVIDER", provider { [1, 2, 3] })
     buildConfigField('Integer?[]', "INT_ARRAY_NULLABLE", [1, null, 3])
@@ -108,6 +116,8 @@ buildConfig {
     buildConfigField(long, "LONG_PROVIDER", provider { 1L })
     buildConfigField(long[], "LONG_NATIVE_ARRAY", [1L, 2L, 3L])
     buildConfigField(long[], "LONG_NATIVE_ARRAY_PROVIDER", provider { [1L, 2L, 3L] })
+    buildConfigField('Long[]?', "LONG_NATIVE_ARRAY_NULLABLE", [1L, 2L, 3L])
+    buildConfigField('Long[]?', "LONG_NATIVE_ARRAY_NULL", provider { null as long[] })
     buildConfigField(Long[], "LONG_ARRAY", [1L, 2L, 3L])
     buildConfigField(Long[], "LONG_ARRAY_PROVIDER", provider { [1L, 2L, 3L] })
     buildConfigField('Long?[]', "LONG_ARRAY_NULLABLE", [1L, null, 3L])
@@ -124,6 +134,8 @@ buildConfig {
     buildConfigField(float, "FLOAT_PROVIDER", provider { 1f })
     buildConfigField(float[], "FLOAT_NATIVE_ARRAY", [1f, 2f, 3f])
     buildConfigField(float[], "FLOAT_NATIVE_ARRAY_PROVIDER", provider { [1f, 2f, 3f] })
+    buildConfigField('Float[]?', "FLOAT_NATIVE_ARRAY_NULLABLE", [1f, 2f, 3f])
+    buildConfigField('Float[]?', "FLOAT_NATIVE_ARRAY_NULL", provider { null as float[] })
     buildConfigField(Float[], "FLOAT_ARRAY", [1f, 2f, 3f])
     buildConfigField(Float[], "FLOAT_ARRAY_PROVIDER", provider { [1f, 2f, 3f] })
     buildConfigField('Float?[]', "FLOAT_ARRAY_NULLABLE", [1f, null, 3f])
@@ -140,6 +152,8 @@ buildConfig {
     buildConfigField(double, "DOUBLE_PROVIDER", provider { 1.0 })
     buildConfigField(double[], "DOUBLE_NATIVE_ARRAY", [1.0, 2.0, 3.0])
     buildConfigField(double[], "DOUBLE_NATIVE_ARRAY_PROVIDER", provider { [1.0, 2.0, 3.0] })
+    buildConfigField('Double[]?', "DOUBLE_NATIVE_ARRAY_NULLABLE", [1.0, 2.0, 3.0])
+    buildConfigField('Double[]?', "DOUBLE_NATIVE_ARRAY_NULL", provider { null as double[] })
     buildConfigField(Double[], "DOUBLE_ARRAY", [1.0, 2.0, 3.0])
     buildConfigField(Double[], "DOUBLE_ARRAY_PROVIDER", provider { [1.0, 2.0, 3.0] })
     buildConfigField('Double?[]', "DOUBLE_ARRAY_NULLABLE", [1.0, null, 3.0])
@@ -156,6 +170,8 @@ buildConfig {
     buildConfigField(boolean, "BOOLEAN_PROVIDER", provider { true })
     buildConfigField(boolean[], "BOOLEAN_NATIVE_ARRAY", [true, false, false])
     buildConfigField(boolean[], "BOOLEAN_NATIVE_ARRAY_PROVIDER", provider { [true, false, false] })
+    buildConfigField('Boolean[]?', "BOOLEAN_NATIVE_ARRAY_NULLABLE", [true, false, false])
+    buildConfigField('Boolean[]?', "BOOLEAN_NATIVE_ARRAY_NULL", provider { null as boolean[] })
     buildConfigField(Boolean[], "BOOLEAN_ARRAY", [true, false, false])
     buildConfigField(Boolean[], "BOOLEAN_ARRAY_PROVIDER", provider { [true, false, false] })
     buildConfigField('Boolean?[]', "BOOLEAN_ARRAY_NULLABLE", [true, null, false])
